# ha-mistral-conversation

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  lint.yml
.vibe/skills/get-api-docs/: SKILL.md
custom_components/mistral_conversation/: __init__.py  client.py  config_flow.py  const.py  conversation.py  entity.py  manifest.json
custom_components/mistral_conversation/translations/: en.json
scripts/: check_ha_version_consistency.py  check_manifest_consistency.py  check_python_version_consistency.py
tests/: conftest.py  test_client.py  test_config_flow.py  test_conversation.py
