[project]
name = "ha-mistral-conversation"
version = "1.0.0"
description = "A Home Assistant integration that provides a conversation agent powered by Mistral AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "homeassistant>=2023.5.0",
    "aiohttp>=3.8.0",
    "voluptuous>=0.13.1",
]
license = { text = "MIT" }
authors = [{ name = "Donagh Horgan", email = "donagh.horgan@gmail.com" }]
keywords = ["home-assistant", "mistral-ai", "conversation", "ai", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

[project.urls]
Homepage = "https://github.com/donaghhorgan/ha-mistral-conversation"
Repository = "https://github.com/donaghhorgan/ha-mistral-conversation"
Issues = "https://github.com/donaghhorgan/ha-mistral-conversation/issues"
Documentation = "https://github.com/donaghhorgan/ha-mistral-conversation#readme"

[tool.setuptools]
packages = ["custom_components.mistral_conversation"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
